--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon GO Web Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Titan+One&display=swap" rel="stylesheet">
     <style>
         .top-banner {
             background-color: #5AA6A6;
@@ -12,6 +15,7 @@
             text-align: center;
             padding: 10px;
             font-weight: bold;
+            font-family: 'Titan One', cursive;
         }
         .navbar {
             background-color: #F1F1F1;
@@ -19,6 +23,9 @@
         }
         .navbar-brand img {
             height: 40px;
+        }
+        .navbar-brand {
+            font-family: 'Alfa Slab One', cursive;
         }
         .content {
             height: 400px;
