--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -67,7 +67,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#">Code Redemption</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Event Ticketing</a></li>
-                    <li class="nav-item"><button class="btn btn-success">Sign In</button></li>
+                    <li class="nav-item">
+                        <a href="signin.html" class="btn btn-success">Sign In</a>
+                    </li>
                 </ul>
             </div>
         </div>
