--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -75,7 +75,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Code Redemption</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Event Ticketing</a></li>
                     <li class="nav-item">
-                        <a href="signin.html" class="btn btn-success">Sign In</a>
+                        <a href="SignIn.html" class="btn btn-success">Sign In</a>
                     </li>
                 </ul>
             </div>
