--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -6,46 +6,92 @@
     <title>Pokemon GO Web Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Titan+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">    
 </head>
 <body>
+    <body class="body-background">
     <div class="top-banner">
         15% discount for your first Web Store purchase on any item $9.99 or more!
     </div>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="pokemon_logo.png" alt="Pokemon GO Logo"> Web Store
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Code Redemption</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Event Ticketing</a></li>
-                    <li class="nav-item">
-                        <a href="SignIn.html" class="btn btn-success">Sign In</a>
-                    </li>
-                </ul>
+    <nav class="navbar main-navbar navbar-expand-lg fixed-top bg-white shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="pokemon_logo.png" alt="Pokemon GO Logo"> Web Store
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#">Code Redemption</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Event Ticketing</a></li>
+                <li class="nav-item">
+                    <a href="SignIn.html" class="btn btn-success">Sign In</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+    <!-- Carousel Section -->
+    <div id="carouselSection" class="container mt-4">
+        <div id="featuredCarousel" class="carousel slide custom-carousel" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="1024947.jpg" class="d-block w-100" alt="Featured Item 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Power Up Ticket Ultra Box</h5>
+                        <p>₱289.00 - Limited Time Offer</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="pokestop.jpg" class="d-block w-100" alt="Featured Item 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>PokeCoins Pack 2</h5>
+                        <p>₱249.00 - Get 550 PokeCoins</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="wallpapersden.com_pokemon-go-pokeball-game_3840x2160.jpg" class="d-block w-100" alt="Featured Item 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>PokeCoins Pack 3</h5>
+                        <p>₱499.00 - Get 1200 PokeCoins</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-controls">
+                <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-top border-bottom">
+    </div>
+    
+    <nav class="navbar sub-navbar">
         <div class="container">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
+            <ul class="navbar-nav mx-auto d-flex flex-row">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="#events-section">Events</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="#item-boxes-section">Item Boxes</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="#pokecoins-section">PokéCoins</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2"></li>
                     <a class="nav-link" href="#">Daily Bundles</a>
                 </li>
             </ul>
@@ -54,7 +100,7 @@
 
     <!-- Events Section -->
     <div id="events-section" class="container mt-4">
-        <h2 class="text-center">Events</h2>
+        <h2 class="section-titles">Events</h2>
         <div class="card-group">
             <div class="card">
                 <img src="https://lh3.googleusercontent.com/WzvKMzgpZsVjfJa8u7ED04ZGkMpzpxXvp3cgWtDXqybnnxUS-Q8s4hzi1WRx4HHwhfpXq_L1kofatpF809uHV7k4TFcjz8XxT_L_dY_xxkXY13A=w1440-e365">
@@ -77,7 +123,7 @@
 
     <!-- Item Boxes Section -->
     <div id="item-boxes-section" class="container mt-4">
-        <h2 class="text-center mb-4">Item Boxes</h2>
+        <h2 class="section-titles">Item Boxes</h2>
         <div class="row justify-content-center">
             <!-- Card 1 -->
             <div class="col-md-4 mb-4">
@@ -123,7 +169,7 @@
 
         <!-- PokeCoins Section -->
     <div id="pokecoins-section" class="container mt-4">
-        <h2 class="text-center mb-4">PokeCoins</h2>
+        <h2 class="section-titles">PokeCoins</h2>
         <div class="row justify-content-center">
             <!-- Card 1 -->
             <div class="col-md-4 mb-4">
