--- a/PokemonTrainers_Store/SignIn.html
+++ b/PokemonTrainers_Store/SignIn.html
@@ -4,33 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Pokemon GO Web Store</title>
+    <link rel="icon" href="pokeball.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .form-container {
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .form-title {
-            text-align: center;
-            margin-bottom: 20px;
-            font-weight: bold;
-            color: #5AA6A6;
-        }
-        .player-id-message {
-            display: none;
-            margin-top: 20px;
-            text-align: center;
-            font-weight: bold;
-            color: #5AA6A6;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="StyleSignIn.css">
 </head>
 <body>
     <div class="form-container">
@@ -47,7 +25,6 @@
                 <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
             </div>
 
-
             <div class="mb-3">
                 <label for="confirm-password" class="form-label">Confirm Password</label>
                 <input type="password" class="form-control" id="confirm-password" placeholder="Confirm your password" required>
@@ -62,7 +39,7 @@
         </form>
 
         <div id="playerIdMessage" class="player-id-message">
-            You're Player ID is: <span id="revealedPlayerId"></span>
+            Your Player ID is: <span id="revealedPlayerId"></span>
         </div>
     </div>
 
