--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon GO Web Store</title>
+    <link rel="icon" href="pokeball.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">    
 </head>
 <body>
@@ -83,16 +84,16 @@
         <div class="container">
             <ul class="navbar-nav mx-auto d-flex flex-row">
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#events-section">Events</a>
+                    <a class="nav-link2" href="#events-section">Events</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#item-boxes-section">Item Boxes</a>
+                    <a class="nav-link2" href="#item-boxes-section">Item Boxes</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#pokecoins-section">PokéCoins</a>
+                    <a class="nav-link2" href="#pokecoins-section">PokéCoins</a>
                 </li>
                 <li class="nav-item mx-2"></li>
-                    <a class="nav-link" href="#">Daily Bundles</a>
+                    <a class="nav-link2" href="#">Daily Bundles</a>
                 </li>
             </ul>
         </div>
