--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style.css">    
+    <link rel="stylesheet" href="StyleIndex.css">    
 </head>
 <body>
     <body class="body-background">
