--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -81,18 +81,18 @@
     </div>
     
     <nav class="navbar sub-navbar">
-        <div class="container">
-            <ul class="navbar-nav mx-auto d-flex flex-row">
-                <li class="nav-item mx-2">
+        <div class="container d-flex justify-content-center">
+            <ul class="navbar-nav d-flex flex-row">
+                <li class="nav-item mx-lg-5">
                     <a class="nav-link2" href="#events-section">Events</a>
                 </li>
-                <li class="nav-item mx-2">
+                <li class="nav-item mx-lg-5">
                     <a class="nav-link2" href="#item-boxes-section">Item Boxes</a>
                 </li>
-                <li class="nav-item mx-2">
+                <li class="nav-item mx-lg-5">
                     <a class="nav-link2" href="#pokecoins-section">PokéCoins</a>
                 </li>
-                <li class="nav-item mx-2"></li>
+                <li class="nav-item mx-lg-4"></li>
                     <a class="nav-link2" href="#">Daily Bundles</a>
                 </li>
             </ul>
