--- a/PokemonTrainers_Store/SignIn.html
+++ b/PokemonTrainers_Store/SignIn.html
@@ -30,7 +30,7 @@
             <button type="submit" class="btn btn-success w-100">Sign In</button>
         </form>
         <div class="text-center mt-3">
-            <p>Don't have an account? <a href="SignUp.html" class="text-success">Sign Up</a></p>
+            <a href="SignUp.html" class="text-success"> Don't have an account? Sign Up here!</a>
         </div>
     </div>
 
