--- a/PokemonTrainers_Store/SignUp.html
+++ b/PokemonTrainers_Store/SignUp.html
@@ -39,7 +39,7 @@
             <button type="submit" class="btn btn-success w-100">Sign Up</button>
         </form>
         <div class="text-center">
-            <p>Already have an account? <a href="SignIn.html" class="text-success">Sign In</a></p>
+            <p><a href="SignIn.html" class="text-success">Already have an account? Sign In Here!</a></p>
         </div>
     </div>
 
