--- a/PokemonTrainers_Store/payment.html
+++ b/PokemonTrainers_Store/payment.html
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <button class="proceed-btn" onclick="window.location.href='checkout.html'">Proceed to Payment</button>
+        <button class="proceed-btn" onclick="window.location.href='cart.html'">Add to Cart</button>
     </div>
 
     <script>
