--- a/PokemonTrainers_Store/userHome.html
+++ b/PokemonTrainers_Store/userHome.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="StyleIndex.css">   
+    <link rel="stylesheet" href="userHome.css">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -104,9 +104,6 @@
                 </li>
                 <li class="nav-item mx-lg-5">
                     <a class="nav-link2" href="#pokecoins-section">PokéCoins</a>
-                </li>
-                <li class="nav-item mx-lg-4"></li>
-                    <a class="nav-link2" href="#">Daily Bundles</a>
                 </li>
             </ul>
         </div>
