--- a/PokemonTrainers_Store/checkout.html
+++ b/PokemonTrainers_Store/checkout.html
@@ -60,7 +60,7 @@
                             <label for="cardName" class="form-label">Name on Card</label>
                             <input type="text" class="form-control" id="cardName" placeholder="John Doe">
                         </div>
-                        <button type="submit" class="btn btn-success w-100" id="payButton">Pay ₱0.00</button>
+                        <button type="submit" class="pay-button w-100" id="payButton">Pay ₱0.00</button>
                     </form>
                 </div>
             </div>
