--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -36,8 +36,9 @@
     </div>
 </nav>
 
-    <!-- Carousel Section -->
-    <div id="carouselSection" class="container mt-4">
+    <!-- News Section -->
+    <h2 class="section-titles">News</h2>
+    <div id="news-section" class="container mt-4">
         <div id="featuredCarousel" class="carousel slide custom-carousel" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -46,25 +47,28 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="1024947.jpg" class="d-block w-100" alt="Featured Item 1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Power Up Ticket Ultra Box</h5>
-                        <p>₱289.00 - Limited Time Offer</p>
-                    </div>
+                    <a href="https://www.nintendo.com/us/whatsnew/catch-up-on-pokemon-day-festivities-including-news-about-a-new-game/" target="_blank">
+                        <img src="https://assets.nintendo.com/image/upload/q_auto/f_auto/c_fill,w_1200/ncom/en_US/articles/2024/catch-up-on-pokemon-day-festivities-including-news-about-a-new-game/1280x720_Switch_News_PD2024" class="d-block w-100" alt="Featured Item 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Catch up on Pokémon Day Festivities!</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="pokestop.jpg" class="d-block w-100" alt="Featured Item 2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>PokeCoins Pack 2</h5>
-                        <p>₱249.00 - Get 550 PokeCoins</p>
-                    </div>
+                    <a href="https://www.gamingbible.com/news/pokemon-scarlet-and-violet-teaser-next-game-040448-20241219" target="_blank">
+                        <img src="https://images.ladbible.com/resize?type=webp&quality=70&width=3840&fit=contain&gravity=auto&url=https://images.ladbiblegroup.com/v3/assets/bltbc1876152fcd9f07/blt2fe34618a6fce641/67643272ac9d6a418b190606/pokemon.jpg" class="d-block w-100" alt="Featured Item 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Pokémon fans think they've found a teaser for the next major game</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="wallpapersden.com_pokemon-go-pokeball-game_3840x2160.jpg" class="d-block w-100" alt="Featured Item 3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>PokeCoins Pack 3</h5>
-                        <p>₱499.00 - Get 1200 PokeCoins</p>
-                    </div>
+                    <a href="https://www.bbc.com/news/articles/c5y0v3gd5e5o" target="_blank">
+                        <img src="https://ichef.bbci.co.uk/ace/standard/1920/cpsprodpb/759e/live/ecec62d0-f43a-11ef-8c03-7dfdbeeb2526.jpg" class="d-block w-100" alt="Featured Item 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Pokémon Day: CEO believes series can last another 50 years</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="carousel-controls">
@@ -91,6 +95,9 @@
                 </li>
                 <li class="nav-item mx-lg-5">
                     <a class="nav-link2" href="#pokecoins-section">PokéCoins</a>
+                </li>
+                <li class="nav-item mx-lg-5">
+                    <a class="nav-link2" href="#news-section">News</a>
                 </li>
             </ul>
         </div>
