--- a/PokemonTrainers_Store/orderReview.html
+++ b/PokemonTrainers_Store/orderReview.html
@@ -6,6 +6,10 @@
     <title>Order Review - Pokemon GO Web Store</title>
     <link rel="icon" href="pokeball.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Galindo&family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="orderReview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -33,8 +37,8 @@
                             <span>Total:</span>
                             <strong id="total">₱0.00</strong>
                         </div>
-                        <button class="btn btn-success w-100" onclick="proceedToCheckout()">Proceed to Checkout</button>
-                        <a href="cart.html" class="btn btn-outline-secondary w-100 mt-2">Back to Cart</a>
+                        <button class="proceed-to-checkout-btn" onclick="proceedToCheckout()">Proceed to Checkout</button>
+                        <a href="cart.html" class="back-to-cart-btn">Back to Cart</a>
                     </div>
                 </div>
             </div>
