--- a/PokemonTrainers_Store/userHome.html
+++ b/PokemonTrainers_Store/userHome.html
@@ -64,6 +64,7 @@
                         <img src="https://assets.nintendo.com/image/upload/q_auto/f_auto/c_fill,w_1200/ncom/en_US/articles/2024/catch-up-on-pokemon-day-festivities-including-news-about-a-new-game/1280x720_Switch_News_PD2024" class="d-block w-100" alt="Featured Item 1">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Catch up on Pokémon Day Festivities!</p>
+                            <h5>Click to Learn More!</h5>
                         </div>
                     </a>
                 </div>
@@ -71,7 +72,8 @@
                     <a href="https://www.gamingbible.com/news/pokemon-scarlet-and-violet-teaser-next-game-040448-20241219" target="_blank">
                         <img src="https://images.ladbible.com/resize?type=webp&quality=70&width=3840&fit=contain&gravity=auto&url=https://images.ladbiblegroup.com/v3/assets/bltbc1876152fcd9f07/blt2fe34618a6fce641/67643272ac9d6a418b190606/pokemon.jpg" class="d-block w-100" alt="Featured Item 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>Pokémon fans think they've found a teaser for the next major game</p>
+                            <h3>Pokémon fans think they've found a teaser for the next major game</h3>
+                            <h5>Click to Learn More!</h5>
                         </div>
                     </a>
                 </div>
@@ -80,6 +82,7 @@
                         <img src="https://ichef.bbci.co.uk/ace/standard/1920/cpsprodpb/759e/live/ecec62d0-f43a-11ef-8c03-7dfdbeeb2526.jpg" class="d-block w-100" alt="Featured Item 3">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Pokémon Day: CEO believes series can last another 50 years</p>
+                            <h5>Click to Learn More!</h5>
                         </div>
                     </a>
                 </div>
