--- a/PokemonTrainers_Store/userHome.html
+++ b/PokemonTrainers_Store/userHome.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="userHome.css">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body>
-    <body class="body-background">  
+<body class="body-background">  
     <div class="top-banner">
         15% discount for your first Web Store purchase on any item $9.99 or more!
     </div>
@@ -34,11 +33,10 @@
                             <span id="username-display">Loading...</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Purchase History</a></li>
+                            <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="cart.html">
                                 <i class="fas fa-shopping-cart"></i> Cart
-                                <span id="cart-count" class="cart-count-badge">0</span>
+                                <span id="cart-count" class="badge bg-success">0</span>
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#" id="signOutBtn">Sign Out</a></li>
