--- a/PokemonTrainers_Store/index.html
+++ b/PokemonTrainers_Store/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Pokemon GO Web Store</title>
     <link rel="icon" href="pokeball.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,8 +26,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Code Redemption</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Event Ticketing</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://tickets.nianticlabs.com/events/#/eventlisting?appId=pgo" target="_blank">Event Ticketing</a></li>
                 <li class="nav-item">
                     <a href="SignIn.html" class="btn btn-success">Sign In</a>
                 </li>
