--- a/PokemonTrainers_Store/userHome.html
+++ b/PokemonTrainers_Store/userHome.html
@@ -19,7 +19,7 @@
     <nav class="navbar main-navbar navbar-expand-lg fixed-top bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="pokemon_logo.png" alt="Pokemon GO Logo"> Web Store
+                <img src="pokemon_trainers_logo.png" alt="Pokemon GO Logo"> Web Store
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
             </ul>
         </div>
     </nav>
-
+    
     <!-- Events Section -->
     <div id="events-section" class="container mt-4">
         <h2 class="section-titles">Events</h2>
@@ -501,7 +501,42 @@
         </div>
     </div>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Footer -->
+<footer style="background: linear-gradient(to right, #5AA6A6, #264653); padding: 40px 0; color: white; text-align: center;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <!-- Column 1 -->
+            <div class="col-md-3 mb-4 text-center">
+                <h5>Main</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Pokémon GO Live</a></li>
+                    <li><a href="#" class="text-white">Leaderboard</a></li>
+                    <li><a href="#" class="text-white">Events</a></li>
+                    <li><a href="#" class="text-white">News</a></li>
+                </ul>
+            </div>
+            
+            <!-- Column 2 -->
+            <div class="col-md-3 mb-4 text-center">
+                <h5>Help</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Support</a></li>
+                    <li><a href="#" class="text-white">Code Redemption</a></li>
+                    <li><a href="#" class="text-white">Community Day Map</a></li>
+                </ul>
+            </div>
+
+        <!-- Copyright -->
+        <div class="row mt-4">
+            <div class="col-12 small text-center">
+                <p>This project is for educational purposes only and no copyright infringement is intended.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const currentUser = JSON.parse(localStorage.getItem('currentUser'));
