--- a/PokemonTrainers_Store/checkout.html
+++ b/PokemonTrainers_Store/checkout.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="cardName" class="form-label">Name on Card</label>
-                            <input type="text" class="form-control" id="cardName" placeholder="John Doe">
+                            <input type="text" class="form-control" id="cardName" placeholder="Kirkie">
                         </div>
                         <button type="submit" class="pay-button w-100" id="payButton">Pay ₱0.00</button>
                     </form>
